DT-1632 Fix spacing between elements of Product Search

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1010,7 +1010,7 @@ a.ecombasket-summary-link {
 			.border-radius(4px);
 			display: inline-block;
 			margin-right: 0;
-			width: 69%;
+			width: 67%;
 		}
 	}
 	button {
@@ -1020,7 +1020,6 @@ a.ecombasket-summary-link {
 		@media @mobile {
 			.border-radius(4px);
 			display: inline-block;
-			margin-left: -4px;
 			vertical-align: top;
 		}
 	}
